--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -65,6 +65,10 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
+footer {
+  position: fixed;
+}
+
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
   color: #000000;;
@@ -300,7 +304,7 @@ th {
  * Super small header above the content for site name and short description.
  */
 .mastfooter {
-  position:fixed;
+  position: absolute;
 }
 .masthead {
   padding-top:    1rem;
