--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -51,6 +51,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  height: 100%;
 }
 @media (min-width: 38em) {
   html {
@@ -59,6 +60,7 @@ html {
 }
 
 body {
+  height: 100%;
   color: #515151;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
@@ -66,7 +68,8 @@ body {
 }
 
 footer {
-  position: fixed;
+  position: absolute;
+  bottom: 0;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -305,6 +308,7 @@ th {
  */
 .mastfooter {
   position: absolute;
+  bottom: 0;
 }
 .masthead {
   padding-top:    1rem;
