--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           </div>
         </footer>
     </div>
-
+    {% include head.html %}
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     <script>
