--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -70,6 +70,7 @@ body {
 footer {
   position: absolute;
   bottom: 0;
+  height: 50px;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -309,6 +310,7 @@ th {
 .mastfooter {
   position: absolute;
   bottom: 0;
+  height: 50px;
 }
 .masthead {
   padding-top:    1rem;
