--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -21,6 +21,7 @@
  */
 
 .container {
+  padding-bottom: 50px;
   max-width: 28rem;
   a {
     @if $theme-color != $default { color: $theme-color; }
