--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -315,6 +315,7 @@ th {
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-top: 1px solid $lightgrey;
+  width: 100%;
 }
 .masthead {
   padding-top:    1rem;
