--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -71,6 +71,11 @@ footer {
   position: absolute;
   bottom: 0;
   height: 20px;
+  padding-top:    1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 3rem;
+  border-top: 1px solid $lightgrey;
+  width: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
