--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
           </h3>
         </div>
       </div>
-
+    </div>
+    <div class="wrapp">
       <div class="container content">
         {{ content }}
       </div>
