--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -10,9 +10,14 @@
   position: relative;
   min-height: 100%;
   width: 100%;
-  padding-bottom: 30px;
 }
 
+.wrap {
+  position: relative;
+  min-height: 100%;
+  width: 100%;
+  padding-bottom: 30px;
+}
 
 /*
  * Container
