--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -70,10 +70,11 @@ body {
 footer {
   position: absolute;
   bottom: 0;
-  height: 30px;
+  height: 40px;
   padding-top:    1rem;
   border-top: 1px solid $lightgrey;
   width: 100%;
+  text-align: center;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -313,10 +314,11 @@ th {
 .mastfooter {
   position: absolute;
   bottom: 0;
-  height: 30px;
+  height: 40px;
   padding-top:    1rem;
   border-top: 1px solid $lightgrey;
   width: 100%;
+  text-align: center;
 }
 .masthead {
   padding-top:    1rem;
