--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
           <div id="footer" class="mastfooter">
               <div class="container">
                 <a href="https://github.com/sanggil1107">
-                    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-github fa-2x" aria-hidden="true" style="color:black"></i>
                 </a>   
                 <a href="yangpang1107@gmail.com">
-                    <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-envelope fa-2x" aria-hidden="true" style="color: black"></i>
                 </a> 
               </div>
           </div>
