--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,11 @@
       </div>
       <footer>
           <div id="footer" class="mastfooter">
-              <div class="container">
+              <div class="container_body">
                 <a href="https://github.com/sanggil1107">
                     <i class="fa fa-github fa-2x" aria-hidden="true" style="color:black"></i>
                 </a>   
+                &nbsp;&nbsp;
                 <a href="yangpang1107@gmail.com">
                     <i class="fa fa-envelope fa-2x" aria-hidden="true" style="color: black"></i>
                 </a> 
