--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -40,3 +40,24 @@
   }
 }
 
+.container_body {
+  padding-bottom: 50px;
+  max-width: 28rem;
+  a {
+    @if $theme-color != $default { color: $theme-color; }
+  }
+}
+@media (min-width: 38em) {
+  .container_body {
+    max-width: 32rem;
+    &.content {
+      padding-top: 6.5rem;
+    }
+  }
+}
+@media (min-width: 56em) {
+  .container_body {
+    max-width: 38rem;
+  }
+}
+
