--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -306,6 +306,13 @@ th {
   margin-right: auto;
 }
 
+.container_body {
+  max-width: 38rem;
+  padding-left:  1rem;
+  padding-right: 1rem;
+  margin-left:  auto;
+  margin-right: auto;
+}
 /*
  * Masthead
  *
