--- a/_scss/component/_pagination.scss
+++ b/_scss/component/_pagination.scss
@@ -12,6 +12,7 @@
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 /* Pagination items can be `span`s or `a`s */
