--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@
               {% if nav[0] == 'Programming' %}
                 {% if tag[0] == '알고리즘' or tag[0] == 'Django' or tag[0] == 'Java' or tag[0] == 'Javascript' or tag[0] == 'Python' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
-                    {{ tag | first }} ({{ tag | last | size }})
+                    {{ tag | first }} ({{ tag | last | size }}) {{ tag[1] }} {{ tag }}
                   </a>
                 {% endif %}
               {% endif %}
@@ -62,9 +62,7 @@
   </nav>
 
   <div class="sidebar-item">
-    <p>
-    &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}.
-    </p>
+
   </div>
      
 </div>
