--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,12 +30,13 @@
             {% if sub_is_relative == '/' %} 
               {% assign sub_url = sub_nav[1] | prepend: site.baseurl %} 
             {% endif %} 
-
+            sub_nav : {% sub_nav %}
+            sub_is_relative : {% sub_is_relative %}
             {% for tag in site.categories %}
               {% if nav[0] == 'Programming' %}
                 {% if tag[0] == '알고리즘' or tag[0] == 'Django' or tag[0] == 'Java' or tag[0] == 'Javascript' or tag[0] == 'Python' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
-                    {{ tag | first }} ({{ tag | last | size }}) {{ tag[1] }} {{ tag }}
+                    {{ tag | first }} ({{ tag | last | size }}) 
                   </a>
                 {% endif %}
               {% endif %}
