--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -43,14 +43,14 @@
               {% endif %}
               {% if sub_nav[0] == 'Cloud' %}
                 {% if tag[0] == 'Docker' or tag[0] == 'Kubernetes' %}
-                  <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
+                  <a class="sidebar-nav-item sidebar-nav-item-sub-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
                     {{ tag | first }} ({{ tag | last | size }})
                   </a>
                 {% endif %}
               {% endif %}
               {% if sub_nav[0] == 'Blog' %}
                 {% if tag[0] == '환경설정' %}
-                  <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">
+                  <a class="sidebar-nav-item sidebar-nav-item-sub-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">
                     {{ tag | first }} ({{ tag | last | size }})
                   </a>
                 {% endif %}
