--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
       {% assign sub_len = nav[1] | size | minus: 1 %}
 
       <span class="{% if sub_len > 0 %}foldable{% endif %}">
-        <a class="sidebar-nav-item ">
+        <a class="sidebar-nav-item" href="/blog/categories">
           {{ nav[0] }}
         </a>
         
