--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,12 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title" style="color: black">{{ page.title }}</h1>
+  <h1 class="post-title" style="color: black">     
+    <font size="5">
+      {{ post.title }}
+    </font></h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-
+  <br>
   {% for categories in page.categories %}
     <a href="/Category/{{ categories }}" class="post-tag">{{ categories }}</a>
   {% endfor %}
