--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,15 +28,15 @@ layout: default
           {% assign prev = forloop.index %}
           {% assign next = forloop.index | minus:2 %}
           {% if count > prev %}
-            이전 : <a href="{{ site.baseurl }}{{ tag[1][prev].url }}">
-              <i class="fa fa-arrow-circle-left fa-2x" aria-hidden="true" style="color: black"></i> </a>
+            이전 : <a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
+              <i class="fa fa-arrow-circle-left fa-5x" aria-hidden="true" style="color: black"></i> </a>
           {% endif %}
          
           
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          
           {% if next > -1 %}
-            다음 : <a href="{{ site.baseurl }}{{ tag[1][next].url }}">
-              <i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true" style="color: black"></i> </a>
+            다음 : <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+              <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i> </a>
           {% endif %}
           <br>
         {% endif %}
