--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,14 +27,14 @@ layout: default
           {% assign current = forloop.index | minus:1 %}
           {% assign prev = forloop.index %}
           {% assign next = forloop.index | minus:2 %}
-          <div style="text-align: left">
+          <div>
           {% if count > prev %}
             이전 : <a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
               <i class="fa fa-arrow-circle-left fa-5x" aria-hidden="true" style="color: black"></i> </a>
           {% endif %}
-          </div>
           
-          <div style="text-align: right">
+          
+          
           {% if next > -1 %}
             다음 : <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
               <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i> </a>
